--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
+  "homepage": "https://github.com/OlgaStrelk/TodoList",
+
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
